:bug: Made custom Cursor not visible on mobile/tablet

--- a/src/components/Cursor/styles.module.scss
+++ b/src/components/Cursor/styles.module.scss
@@ -1,36 +1,46 @@
+@import '../../styles/base/bp_variables';
+
 .Cursor {
-    pointer-events: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-    background: transparent;
-    border: 1px solid #ffffff52;
-    box-sizing: content-box;
-    padding: 10px;
+    visibility: hidden;
 
-    z-index: 99999;
-    transition-duration: .05s;
-    transition-timing-function: ease-out;
-    transform: translate3d(-10px, -10px, 0);
-
-    > div {
+    @media only screen and (min-width: $bp-desktop-sm) {
+        visibility: visible;
         pointer-events: none;
-        width: 6px;
-        height: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        width: 10px;
+        height: 10px;
         border-radius: 100%;
-        display: block;
-        background-color: rgba(255, 255, 255, 0.692);
-    }
+        background: transparent;
+        border: 1px solid #ffffff52;
+        box-sizing: content-box;
+        padding: 10px;
 
-    &.lightTheme {
-        border: 1px solid rgba(0, 0, 0, 0.25);
+        z-index: 99999;
+        transition-duration: .05s;
+        transition-timing-function: ease-out;
+        transform: translate3d(-10px, -10px, 0);
 
         > div {
-            background-color: rgba(0, 0, 0, 0.65);
+            pointer-events: none;
+            width: 6px;
+            height: 6px;
+            border-radius: 100%;
+            display: block;
+            background-color: rgba(255, 255, 255, 0.692);
+        }
+
+        &.lightTheme {
+            border: 1px solid rgba(0, 0, 0, 0.25);
+
+            > div {
+                background-color: rgba(0, 0, 0, 0.65);
+            }
+        }
+
+        &.darkTheme {
         }
     }
 }
